feat: new endpoint restaurants GET /restaurants/{restaurantId}
